@@ -1,2 +1,0 @@
-This package was submitted to CRAN on 2019-10-02.
-Once it is accepted, delete this file and tag the release (commit 4e3aff1379).
