@@ -2,9 +2,11 @@ Package: spatialEco
 Type: Package
 Title: Spatial Analysis and Modelling Utilities
 Version: 1.3-2
-Date: 2020-04-14
-Authors@R: c(person(family="Evans", given="Jeffrey S.", email = "jeffrey_evans@tnc.org",
-             role = c("aut", "cre")))
+Date: 2020-04-24
+Authors@R: c(
+  person(family="Evans", given="Jeffrey S.", email = "jeffrey_evans@tnc.org", role = c("aut", "cre")),
+  person(family="Murphy", given="Melanie A.", role = "ctb"),			 
+  person(family="Ram", given="Karthik", role = "ctb") )
 Description: Utilities to support spatial data manipulation, query, sampling
     and modelling. Functions include models for species population density, download
     utilities for climate and global deforestation spatial products, spatial
