@@ -33,6 +33,7 @@ export(download.prism)
 export(effect.size)
 export(erase.point)
 export(explode)
+export(extract.vertices)
 export(focal.lmetrics)
 export(fuzzySum)
 export(gaussian.kernel)
